--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,27 +7,23 @@ on:
 
 jobs:
   deploy:
-    name: Deploy to Hostgator
+    name: Deploy no Hostgator
     runs-on: ubuntu-latest
     environment: deploy
     steps:
-      - name: Checkout Commit
+      - name: Verifica se ocorreu commits recentes
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - name: Setup Node
+      - name: Gerencia versão do NodeJS
         uses: actions/setup-node@v3
         with:
           node-version: '18'
-      - name: Install pnpm
-        run: curl -f https://get.pnpm.io/v6.16.js | node - add --global pnpm@next-7
-      - name: Install dependencies
-        run: pnpm install
-      - name: Update pnpm bundle
-        run: curl -L --fail https://get.pnpm.io/v5.js > dist/pnpm.js
-      - name: Build files
-        run: pnpm run build
-      - name: Sync files
+      - name: Instala gerenciador de pacotes e dependências
+        run: curl -f https://get.pnpm.io/v6.16.js | node - add --global pnpm@next-7; pnpm install
+      - name: Inicia Build do projeto
+        run: pnpm run build; curl -L --fail https://get.pnpm.io/v5.js > dist/pnpm.js
+      - name: Sincroniza com o servidor
         uses: SamKirkland/FTP-Deploy-Action@4.3.3
         with:
           local-dir: ./dist/
